--- a/static/css/style.css
+++ b/static/css/style.css
@@ -176,6 +176,32 @@ button:active {
     margin: 0;
 }
 
+#results-container {
+    text-align: center;
+    background-color: #44475a;
+    padding: 15px;
+    border-radius: 8px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+    width: 90%;
+    max-width: 500px;
+    margin-top: 20px;
+    color: #f8f8f2;
+}
+
+.maps-link {
+    display: inline-block;
+    background-color: #6272a4;
+    color: #f8f8f2;
+    padding: 10px 15px;
+    border-radius: 25px;
+    text-decoration: none;
+    margin-top: 10px;
+}
+
+.maps-link:hover {
+    background-color: #525c79;
+}
+
 /* Responsive Design */
 @media (max-width: 768px) {
     #form-section {
