--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
                         <input
                             type="text"
                             name="address"
-                            placeholder="Enter an address"
+                            placeholder="Enter an address or place"
                             required
                             
                         />
@@ -59,6 +59,7 @@
         </section>
     </main>
 
+    <script id="google-maps-script"></script>
     <script src="/static/js/app.js"></script>
 </body>
 </html>
