added loading screen

--- a/templates/index.html
+++ b/templates/index.html
@@ -59,6 +59,11 @@
         </section>
     </main>
 
+    <div id="loading-screen">
+        <div class="loading-spinner"></div>
+        <p>Calculating the optimal route...</p>
+    </div>
+
     <script id="google-maps-script"></script>
     <script src="/static/js/app.js"></script>
 </body>
