--- a/templates/results.html
+++ b/templates/results.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Optimized Route - OptiRoute</title>
     <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="icon" href="/static/images/logo.png" type="image/png">
 </head>
 <body>
     <main>
