fade-in animation on page start up

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,11 +10,11 @@
 <body>
     <main>
         <div id="content-container">
-            <header>
+            <header class="fade-in">
                 <h1>OptiRoute</h1>
                 <p class="subtitle">Plan the most efficient route for your deliveries.</p>
             </header>
-            <section id="form-section">
+            <section id="form-section" class="fade-in">
                 <form id="route-form">
                     <!-- Starting Point Input -->
                     <div class="starting-point">
@@ -61,7 +61,7 @@
         </div>
     </main>
 
-    <footer id="footer">
+    <footer id="footer" class="fade-in">
         <div class="social-links">
             <a href="https://www.linkedin.com/in/aristotle-temmerath" target="_blank">
                 <img src="/static/images/linkedin-icon.png" alt="LinkedIn" class="social-icon">
