hardcode frontend API key to HTML
since the frontend API key must be exposed anyway, might as well simplify things by just hardcoding it in the HTML. this removes an unnecessary request to the backend and makes frontend load faster.

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,9 @@
     <title>OptiRoute</title>
     <link rel="stylesheet" href="/static/css/style.css">
     <link rel="icon" href="/static/images/logo.png" type="image/png">
+    <script async defer 
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPY3I18ZsmntQ798mERX8UCRIFQeZQ3fI&libraries=places">
+    </script>
 </head>
 <body>
     <main>
