--- a/templates/results.html
+++ b/templates/results.html
@@ -22,6 +22,12 @@
                     <a id="maps-link" href="#" target="_blank" class="maps-link">Open in Google Maps</a>
                     <button id="go-back-btn">Go Back</button>
                 </div>
+
+                <p class="note">
+                    <strong>Note:</strong> If Google Maps shows <strong>"Preview"</strong> instead of <strong>"Start"</strong>, 
+                    tap on your <strong>starting location</strong>, replace it with <strong>"Your location,"</strong> 
+                    and then you should be able to start navigation.
+                </p>
             </div>
         </div>
     </main>
