--- a/templates/results.html
+++ b/templates/results.html
@@ -25,8 +25,8 @@
 
                 <p class="note">
                     <strong>Note:</strong> If Google Maps shows <strong>"Preview"</strong> instead of <strong>"Start"</strong>, 
-                    tap on your <strong>starting location</strong>, replace it with <strong>"Your location,"</strong> 
-                    and then you should be able to start navigation.
+                    update both your <strong>starting location</strong> and <strong>final destination</strong> to <strong>"Your location."</strong> 
+                    This will enable navigation.
                 </p>
             </div>
         </div>
